# tauri-commands

./: .gitignore  Cargo.toml  README.md
crates/tauri-commands/: Cargo.toml
crates/tauri-commands-macros/: Cargo.toml
crates/tauri-commands-macros/src/: lib.rs
crates/tauri-commands/src/: codegen.rs  impls.rs  lib.rs
crates/tauri-commands/src/codegen/: hidden.rs
crates/tauri-commands/src/impls/: codegen.rs  simple.rs
crates/yasc/: Cargo.toml  README.md
crates/yasc/src/: collection.rs  lib.rs  util.rs
crates/yasc/src/codegen/typescript/: mod.rs
examples/hello-vite-tauri/: README.md  package.json
examples/hello-vite-tauri/src/: App.vue  tauri.ts
examples/hello-vite-tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/hello-vite-tauri/src-tauri/src/: main.rs
examples/hello-vite-tauri/src/components/: HelloWorld.vue
