[package]
name = "tauri-commands-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = "1.0.86"

[features]
codegen = []
