[package]
name = "tauri-commands"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
heck = { version = "0.4.0", optional = true }
schemars = { version = "0.8.8", optional = true }
serde = "1.0.136"
serde_json = "1.0.79"
tauri = { version = "1.0.0-rc.4" }
tauri-commands-macros = { version = "0.1.0", path = "../tauri-commands-macros" }
yasc = { version = "0.1.0", path = "../yasc", optional = true }

[features]
default = []
codegen = ["yasc", "schemars", "heck", "tauri-commands-macros/codegen"]
