[package]
name = "yasc"
version = "0.1.0"
edition = "2021"
publish = false
license-file = "LICENSE.md"

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.44"
async-recursion = "1.0.0"
heck = "0.4.0"
parking_lot = "0.12.0"
schemars = "0.8.6"
serde = "1.0.130"
serde_json = "1.0.68"
tracing = "0.1.29"
url = "2.2.2"
